TestSuite/errors/err0210.pas
begin
  var s: string;
  var rs := s.Copy;
end.